<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Families Share</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="termina">Termina</string>
    <string name="password">Password</string>
    <string name="conferma">Conferma</string>
    <string name="unisciti_a_un_gruppo">UNISCITI A UN GRUPPO</string>
    <string name="crea_un_nuovo_gruppo">CREA UN NUOVO GRUPPO</string>
    <string name="nome">Nome</string>
    <string name="descrizione">Descrizione</string>
    <string name="continua">CONTINUA</string>
    <string name="cancella">CANCELLA</string>
    <string name="altri_utenti_non_possono_trovare_il_gruppo">Altri utenti NON possono trovare il gruppo</string>
    <string name="accountname">AccountName</string>
    <string name="info">INFO</string>
    <string name="bambini">UTENTI A CARICO</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="button">Button</string>
    <string name="AggFigl">Non hai ancora aggiunto utenti a carico. Fare clic sull\'icona in basso a destra per agiungere un nuovo utente a carico</string>
    <string name="non_specificato">Non specificato</string>
    <string name="contatto_personale">Contatto personale</string>
    <string name="cognome">Cognome</string>
    <string name="phone">Phone</string>
    <string name="avatar">Avatar</string>
    <string name="back">Back</string>
    <string name="riga">riga</string>
    <string name="location">location</string>
    <string name="mail">mail</string>
    <string name="sfondo">sfondo</string>
    <string name="adduser">addUser</string>
    <string name="numero_di_telefono_facoltativo">Numero di telefono (facoltativo)</string>
    <string name="Text1">Rendi il mio profilo visibile agli altri utenti</string>
    <string name="Pass">La password deve contenere almeno 8 caratteri</string>
    <string name="ripeti_password">Ripeti password</string>
    <string name="e_mail">E-mail</string>
    <string name="giorno">Giorno</string>
    <string name="mese">Mese</string>
    <string name="anno">Anno</string>
    <string-array name="metodo">
        <item>EMAIL</item>
        <item>Numero di Telefono</item>
    </string-array>
    <string-array name="gender">
        <item>Non Specificato</item>
        <item>Maschio</item>
        <item>Femmina</item>
    </string-array>
    <string-array name="GradoParentela">
        <item>Padre</item>
        <item>Madre</item>
        <item>Nonno</item>
        <item>Nonna</item>
        <item>Zio</item>
        <item>Zia</item>
        <item>Fratello</item>
        <item>Sorella</item>
        <item>Figlio</item>
        <item>Figlia</item>
    </string-array>
    <string-array name="dayes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="crea2">Imposta la visibilità del gruppo</string>
    <string name="crea1">Fornisci nome e descrizione</string>
    <string name="crea3">Fornire l\'area</string>
    <string name="crea4">Fornire le informazioni di contatto</string>
    <string name="crea5">Invita persone</string>
    <string name="aggiungi_membri">Aggiungi membri</string>
    <string name="grado_di_parentela">Grado di Parentela</string>
    <string name="genere">Genere</string>
    <string name="registrati">Registrati</string>
    <string name="accedi">Accedi</string>
    <string name="hai_gi_un_account_accedi">Hai già un account? Accedi</string>
    <string name="votaci">Votaci</string>
    <string name="home_page">Home page</string>
    <string name="il_mio_profilo">Il mio profilo</string>
    <string name="il_mio_calendario">Il mio calendario</string>
    <string name="crea_un_gruppo">Crea un gruppo</string>
    <string name="crea_un_attivit_indipedente">Crea un\'attività indipedente</string>
    <string name="invita_amici">Invita amici</string>
    <string name="guida_all_avviamento">Guida all\'avviamento</string>
    <string name="faqs">FAQs</string>
    <string name="string_faqs">FAQs</string>
    <string name="esci">Esci</string>
    <string name="calendario_del_gruppo">Calendario del gruppo</string>
    <string name="set_the_date">Set the date</string>
    <string name="Guida">Vuoi una soluzione della \n piattaforma da inviare alla \n tua email?</string>
    <string name="annulla">ANNULLA</string>
    <string name="ok">OK</string>
    <string name="AttivitàDelGruppo">Attività del gruppo</string>
    <string name="LeMieNotifiche">Le mie notifiche</string>
    <string name="Group1">Group 1</string>
    <string name="Group2">Group 2</string>
    <string name="Group3">Group 3</string>
    <string name="Group4">Group 4</string>
    <string name="Group5">Group 5</string>
    <string name="send">SEND</string>
    <string-array name="group1">
        <item>item1</item>
    </string-array>
    <string-array name="group2">
        <item>item1</item>
        <item>item2</item>
    </string-array>
    <string-array name="group3">
        <item>item1</item>
        <item>item2</item>
    </string-array>
    <string-array name="group4">
        <item>item1</item>
        <item>item2</item>
    </string-array>
    <string name="si_prega_di_compilare_le_informazioni_di_contatto">Si prega di compilare le informazioni di contatto</string>
    <string name="scopri_di_pi_sul_sito">Scopri di più sul sito</string>
    <string name="il_progetto">Il progetto</string>
    <string name="p1">Finanziato nell\'ambito del programma "Information and Communication Technologies" di Horizon 2020, bando "sviluppo di piattaforme di partecipazione collettiva per la sostenibilità e l\'innovazione sociale", il progetto Families_Share sta sviluppando una piattaforma volta a favorire la diffusione di reti sociali e la sensibilizzazione nell\'ambito della cura all\'infanzia e dell\'equilibrio vita-lavoro. La piattaforma sfrutta le reti di vicinato e consente ai cittadini di riunirsi per condividere compiti, tempo e competenze rilevanti per l\'assistenza all\'infanzia e l\'educazione nel dopo scuola / tempo libero, laddove i servizi a ciò dedicati, nell\'attuale periodo di stagnazione e austerità, sono diventati inacessibili per le famiglie.</string>
    <string name="p2">In Europa, nell\'ultimo decennio, trovare un equilibrio tra lavoro e vita famigliare/privata è diventato sempre più una sfida per le famiglie. La crisi economica ha impattato non solo sul mercato del lavoro, ma anche sul welfare. Come conseguenza, i tassi di disoccupazione sono aumentati (soprattutto nei settori che impiegano maggiormente persone di sesso maschile), mentre molte lavoratrici ora sono impiegate part-time. Lavori stabili e a lungo termine non sono più la regola, mentre continuano ad aumentare i contratti precari, con sempre più lavoratori/lavoratrici che seguono percorsi di riqualificazione e affrontano periodi di disoccupazione. Dall\'altro lato, una forza lavoro a tempo indeterminato sempre più ristretta è soggetta a maggiori carichi di lavoro e ad orari di lavoro più lunghi, rendendo più difficile il rapporto tra lavoro e vita quotidiana, nonché insostenibile il modello attuale.</string>
    <string name="p3">Il progetto Families_Share offre una soluzione dal basso, sotto forma di una piattaforma online (opern source ed ad accesso aperto e gratuito) che supporti le famiglie nella condivisione del tempo e delle attività legate alla cura dei bambini, alla genitorialità al doposcuola e tempo libero e alle attività domestiche, con una particolare attenzione all\'inclusione delle famiglie a basso reddito. Il progetto aspira anche a coinvolgere gli anziani nelle attività di cura dei bambini, offrendo loro supporto nelle attività giornaliere e rendendoli partecipi agli eventi organizzati dalle famiglie. Per aggiungere tale obiettivo, il progetto parte dal concetto di "banca del tempo" capitalizzando le esperienze sull\'innovazione digitale e cura all\'infanzia dei partner. Il progetto sfrutta anche il potennziale delle reti delle tecnologie ICT, al fine di aumentare l\'innovazione partecipata incoraggiando la diffusione di quartieri auto-organizzati.</string>
    <string name="p4">La presente Informativa sulla privacy definisce la policy di Families_Share relativamente alle tue informazioni, comprese le informazioni che identificano o potrebbero identificarti personalmente (conosciute come informazioni di identificazione personale negli Stati Uniti o dati personali nell\'Unione europea, che chiameremo Dati Personali) e altre informazioni raccolta dai visitatori e dagli utenti dei Servizi. Si prega di leggere attentamente questinformativa sulla privacy in modo da comprendere come tratteremo i tuoi dati. Utilizzando uno qualsiasi dei nostri Servizi, confermi di aver letto, compreso e accettato la presente informativa sulla privacy. Se non accetti la presente policy, sei pregato di non utilizzare i nostri Servizi. In caso di domande, ti preghiamo di contattarci via email acontact@families-share.eu</string>
    <string name="off"><![CDATA[<]]></string>
    <string name="on"><![CDATA[>]]></string>
    <string name="la_sfida">La sfida</string>
    <string name="soluzione">La soluzione proposta da</string>
    <string name="informativa_privacy">Informativa privacy</string>
    <string name="version">App Version: 20201006</string>
    <string name="background">background</string>
    <string name="numerot">Numero di telefono</string>
    <string-array name="type">
        <item>Non specificato</item>
        <item>Italia</item>
    </string-array>
    <string name="city">Città</string>
    <string name="bell">Bell</string>
    <string name="modifica">Modifica</string>
    <string name="via">Via/Piazza</string>
    <string name="numero">Numero civico</string>
    <string name="descrizione1">Fornire una descrizione facoltativa</string>
    <string name="regole">Quali regole si applicano a un gruppo?</string>
    <string name="turno">Cosa succede se non riesco a rispettare il mio turno?</string>
    <string name="esperienza">Cosa succede se non ho esperienza nel gestire gruppi di bambini?</string>
    <string name="sicurezza">Quali misure devo adottare per svolgere le attività con i bambini in tutta sicurezza?</string>
    <string name="creare_gruppo">Come posso creare un nuovo gruppo?</string>
    <string name="organizzare_attività">Che attività si possono organizzare?</string>
    <string name="ruoli_gruppo">Quali sono i ruoli dell\'amministratore del gruppo?</string>
    <string name="emergenze_perso">EMERGENZE: Cosa fare se un/a bambino/a si è perso/a?</string>
    <string name="info2">Info</string>
    <string name="calendario">Calendario</string>
    <string name="attivita">Attività</string>
    <string name="membri">Membri</string>
    <string name="chat">Chat</string>
</resources>