<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_home_page"
            android:title="@string/home_page" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/il_mio_profilo" />
        <item
            android:id="@+id/group_create"
            android:icon="@drawable/ic_search_group"
            android:title="@string/crea_un_gruppo" />
        <item
            android:id="@+id/nav_activity_create"
            android:icon="@drawable/ic_search_group"
            android:title="@string/crea_un_attivit_indipedente" />
        <item
            android:id="@+id/attivita_esterna"
            android:icon="@drawable/ic_attivita_esterna"
            android:title="@string/attivita_esterna" />

    </group>



    <item android:id="@+id/nav_invite_friends"
        android:icon="@drawable/ic_invite_friends"
        android:title="@string/invita_amici" />



    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/string_faqs" />


        <item android:id="@+id/nav_guida"
            android:icon="@drawable/ic_guida"
            android:title="@string/guida_all_avviamento" />

        <item android:id="@+id/nav_info"
            android:icon="@drawable/ic_faqs"
            android:title="@string/il_progetto" />
    </group>


    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/esci" />
    </group>
</menu>